{
    "name": "Lab2Input",
    "maps": [
        {
            "name": "Player",
            "id": "04907eab-4774-4454-ae68-917cea7bd531",
            "actions": [
                {
                    "name": "Quit",
                    "type": "Button",
                    "id": "7adac7b9-b8c3-4dd8-bd93-d29dee8f81be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraSwitch",
                    "type": "Value",
                    "id": "025795ac-0172-443d-8862-580f178d5bd1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateMaze",
                    "type": "Button",
                    "id": "42e4287d-be55-4fbd-9044-3026425d5945",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "be406919-31db-44b7-9f62-379d50cb8278",
                    "path": "*/{Menu}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4c6b1e1-4de6-47a5-b873-331387abbc7a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Quit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8657504-f6c6-4a5d-85db-e9ada01f0244",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d41f8fb3-1002-4ebf-8474-a91980feddfc",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ee99f1a-c37a-4a84-9550-b16bb772bd6c",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateMaze",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}